Instead of determining the height of the sidebar and fixing it to that, this patch uses the CSS pointer-events directive to make the area between the side bar and the map status usable. This should avoid cutting off the sidebar and force users to scroll even if there is space available but still allow to interact with that area. Please report if there are any problems with this.
fix #467, fix #461

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   width: 340px;
   bottom: 45px;
   z-index: 1001;
+  pointer-events: none;
 }
 
 #sidebar {
@@ -34,6 +35,7 @@ body {
   overflow-y:scroll;
   overflow-x:hidden;
   z-index: 3000;
+  pointer-events: auto;
 }
 
 #sidebartoggle {
